fix mobile admin bar overflow

--- a/src/scss/04-utilities/_wp-admin-bar.scss
+++ b/src/scss/04-utilities/_wp-admin-bar.scss
@@ -1,5 +1,5 @@
 #wpadminbar {
     @include breakpoints(sm, max) {
-        overflow: hidden;
+        overflow: scroll;
     }
 }
